package com.dainws.games.crm.domain.core.card;

public enum WarriorRarity {
	COMMON,
	UNCOMMON,
	RARE,
	EPIC,
	LEGENDARY,
	MITHIC;
}
